@startuml PetReminderERDiagram
title Pet Care Reminder System — Entity Relationship Diagram

skinparam entityFontSize 11

entity "users" as users {
  * **id** : INTEGER <<PK>> <<AUTO_INCREMENT>>
  --
  username : VARCHAR(50) <<UNIQUE, NOT NULL>>
  email : VARCHAR(100) <<UNIQUE>>
  password_hash : VARCHAR(255) <<NOT NULL>>
  full_name : VARCHAR(100)
  created_at : DATETIME
  last_login : DATETIME
  active : BOOLEAN <<DEFAULT true>>
}

entity "pets" as pets {
  * **id** : INTEGER <<PK>> <<AUTO_INCREMENT>>
  --
  * user_id : INTEGER <<FK>> <<NOT NULL>>
  name : VARCHAR(100) <<NOT NULL>>
  species : VARCHAR(50) <<NOT NULL>>
  breed : VARCHAR(100)
  birth_date : DATE
  gender : VARCHAR(10)
  weight : REAL
  notes : TEXT
  trained : BOOLEAN
  indoor : BOOLEAN
  can_fly : BOOLEAN
}

entity "reminders" as reminders {
  * **id** : INTEGER <<PK>> <<AUTO_INCREMENT>>
  --
  * pet_id : INTEGER <<FK, ON DELETE CASCADE>> <<NOT NULL>>
  reminder_type : VARCHAR(50) <<NOT NULL>>
  scheduled_time : DATETIME <<NOT NULL>>
  completed : BOOLEAN <<DEFAULT false>>
  description : TEXT
  priority : VARCHAR(20)
  recurring : BOOLEAN <<DEFAULT false>>
  recurrence_pattern : VARCHAR(50)
  created_at : DATETIME
  --
  food_type : VARCHAR(100)
  portion_grams : REAL
  includes_water_change : BOOLEAN
  medication_name : VARCHAR(100)
  dosage : REAL
  dosage_unit : VARCHAR(20)
  prescribed : BOOLEAN
  veterinarian_name : VARCHAR(100)
  clinic_name : VARCHAR(100)
  clinic_phone : VARCHAR(20)
  reason : VARCHAR(255)
  estimated_cost : REAL
  confirmed : BOOLEAN
  grooming_type : VARCHAR(100)
  professional : BOOLEAN
  groomer_name : VARCHAR(100)
  exercise_type : VARCHAR(100)
  duration_minutes : INTEGER
  distance_km : REAL
}

entity "medical_records" as medical_records {
  * **id** : INTEGER <<PK>> <<AUTO_INCREMENT>>
  --
  * pet_id : INTEGER <<FK, ON DELETE CASCADE>> <<NOT NULL>>
  record_date : DATE <<NOT NULL>>
  record_type : VARCHAR(50) <<NOT NULL>>
  diagnosis : VARCHAR(255)
  treatment : TEXT
  veterinarian_name : VARCHAR(100)
  cost : REAL <<DEFAULT 0>>
  next_check_date : DATE
  notes : TEXT
  vaccine_name : VARCHAR(100)
}

' ── Relationships (Crow's Foot Notation) ──
users ||--o{ pets : "1 user owns\n0..* pets"
pets ||--o{ reminders : "1 pet has\n0..* reminders\n(CASCADE DELETE)"
pets ||--o{ medical_records : "1 pet has\n0..* medical records\n(CASCADE DELETE)"

@enduml
